================================================================


RELEASE NOTES
=============


2.40.1 - July ??, 2010

    Restored support for GNU Prolog. Requires GNU Prolog version 1.4.0 (or
    later), which provides support for the ISO Prolog predicate directive
    multifile/1.

    Improved the built-in debugger by making explicit the calls to the (\+)/1
    built-in predicate.

    Corrected a bug where a call to a local predicate would always fails when
    the object or category contains a declared but not defined non-terminal.

    Corrected a bug in the compilation of (\+)//1 calls in grammar rules.
    Thanks to Bart Demoen, Ulrich Neumerkel, and Jan Burse for driving my
    attention to this bug.

    Recognize e/0 and pi/0 as de facto Prolog standard built-in arithmetic
    functions. Calls to these functions will no longer be reported when the
    portability flag is set to "warning". In addition, added syntax coloring
    support for these two functions.

    Updated the internal hook predicate '$lgt_tr_predicate_indicators'/2,
    used in the config files for processing proprietary Prolog directives,
    in order to translate both grammar rule non-terminal indicators and
    predicate indicators. A possible usage scenario is tabling grammar rule
    non-terminals.

    Updated the definition of the Logtalk flag "prolog_version" for Ciao in
    order to compute major, minor, and patch version numbers.

    Corrected a bug in the goal_expansion/2 clauses found on the SWI-Prolog
    and YAP config files that are used for expanding calls to the Prolog
    built-in predicates phrase/2-3 with a Object::GrammarRuleBody in the
    first argument.

    Added a set of unit tests for the "securemp" example.

    Improved the "debug_hooks" example, showing how to use a parametric hook
    object in alternative to two simple hook objects.

    Improved the "help" example by adding a helper predicate for quick access