@@ -32,12 +32,12 @@ keyword =	'\<(after|before)(?=\()',
 			'\<((bag|set)of|f(ind|or)all)(?=\()',
 			'\<threaded(_(call|once|ignore|exit|peek|wait|notify))?(?=\()',
 			'\<unify_with_occurs_check(?=\()',
-			'\<(functor|arg|copy_term)(?=\()',
+			'\<(functor|arg|copy_term|numbervars)(?=\()',
 			'\<(rem|mod|abs|sign)(?=\()',
 			'\<(float_(integer|fractional)_part|float)(?=\()',
 			'\<(floor|truncate|round|ceiling)(?=\()',
 			'\<(cos|atan|exp|log|s(in|qrt))(?=\()',
-			'\<(var|atom(ic)?|integer|float|c(allable|ompound)|n(onvar|umber))(?=\()',
+			'\<(var|atom(ic)?|integer|float|c(allable|ompound)|n(onvar|umber)|ground)(?=\()',
 			'\<compare(?=\()',
 			'\<(curren|se)t_(in|out)put(?=\()',
 			'\<(open|close)(?=\()',
@@ -56,6 +56,7 @@ keyword =	'\<(after|before)(?=\()',
 			'\<(set|current)_prolog_flag(?=\()',
 			'\<halt(?=\()', '\<(halt)\>',
 			'\<once(?=\()',
+			'\<((key)?sort)(?=\()',
 			'\<(true|fail|repeat)\>',
 			'\<(e|pi|is|rem|mod)\>'
 
