@@ -108,10 +108,12 @@
 			<string>compound</string>
 			<string>nonvar</string>
 			<string>number</string>
+			<string>ground</string>
 			<string>compare</string>
 			<string>arg</string>
 			<string>copy_term</string>
 			<string>functor</string>
+			<string>numbervars</string>
 			<string>current_predicate</string>
 			<string>predicate_property</string>
 			<string>abolish</string>
@@ -170,6 +172,8 @@
 			<string>set_prolog_flag</string>
 			<string>current_prolog_flag</string>
 			<string>halt</string>
+			<string>keysort</string>
+			<string>sort</string>
 			<string>abs</string>
 			<string>atan</string>
 			<string>ceiling</string>
